add execution of bundling openapi files

--- a/openapi/components/schemas/user.yaml
+++ b/openapi/components/schemas/user.yaml
@@ -1,4 +1,4 @@
-user:
+User:
   type: object
   properties:
     id:
@@ -6,8 +6,7 @@ user:
       format: int64
       description: ユーザーID
     name:
-      type: string
-      description: ユーザー名
+      $ref: './user.yaml#/UserName'
     email:
       type: string
       description: メールアドレス
@@ -15,3 +14,20 @@ user:
       type: integer
       format: int32
       description: 年齢
+  required:
+    - id
+    - name
+    - email
+
+UserName:
+  type: object
+  properties:
+    firstName:
+      type: string
+      description: ユーザー名(姓)
+    lastName:
+      type: string
+      description: ユーザー名(名)
+  required:
+    - firstName
+    - lastName
